[package]
name = "zola_page_date_setter"
version = "0.1.0"
description = "Tool to set dates for zola pages based on git history"
keywords = []
repository = "https://github.com/c-git/zola_page_date_setter"
documentation = "https://github.com/c-git/zola_page_date_setter"
categories = []
authors = ["One <one.bgz1@gmailcom>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive", "cargo", "wrap_help"] }
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.18.0"
regex = "1.10.2"
version-control-clean-check = "0.1.0"
