[package]
name = "zola_chrono"
version = "0.1.1"
description = "Tool to set dates for zola pages based on git history"
keywords = []
repository = "https://github.com/c-git/zola_chrono"
documentation = "https://docs.rs/zola_chrono"
categories = []
authors = ["One <one.bgz1@gmailcom>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "cargo", "wrap_help"] }
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.18.0"
regex = "1.10.2"
toml_edit = "0.21.0"
version-control-clean-check = "0.1.0"

[dev-dependencies]
rstest = "0.18.2"
