[package]
name = "zola_chrono"
version = "0.3.1"
authors = ["One <one.bgz1@gmail.com>"]
categories = []
documentation = "https://docs.rs/zola_chrono"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/c-git/zola_chrono"
description = "Tool to set dates for zola pages based on git history"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive", "cargo", "wrap_help"] }
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.18.0"
regex = "1.10.2"
toml_edit = "0.22.6"
version-control-clean-check = "0.1.0"

[dev-dependencies]
cargo-util = "0.2.8"
git2 = "0.18.1"
rstest = "0.19.0"
strum = { version = "0.26.1", features = ["derive", "strum_macros"] }
